# rtsp-object-detection

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
object_detection/backend/: config.py  docker-compose.yml  main.py  main_api.py
object_detection/backend/database/: data_engine.py  data_model.py  data_store.py  db_utils.py  schema.py
object_detection/backend/database/migrations/: env.py
object_detection/backend/database/migrations/versions/: 16a45a7d0f57_add_stream_name.py  778ece3f04f8_add_metadata_to_sessiontable.py  dfd983df7648_initial_schema.py
object_detection/backend/object_models/: model.py  test_yolo.py
object_detection/backend/routes/: health.py  stream_data.py  stream_start.py
object_detection/backend/rtsp/: downscale_video.bash  test_cv.py  video_stream.py
object_detection/backend/utils/: runtime.py  save_frame.py  utils.py
