[tool.poetry]
name = "object_detection"
version = "0.0.1"
description = "Detect objects via data stream using yolo object model"
authors = ["Manoj Deshpande <manojnd9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.11.0.86"
numpy = "^2.2.4"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
